--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "axios": "^1.7.7",
     "jodit": "^4.2.38",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
